# kml

./: .gitignore  AUTHORS  CMakeLists.txt  Doxyfile  INSTALL  Makefile.am  Makefile.in  README  SConstruct  configure.in  cpuinfo.py  kml.kdevelop  kml.kdevses
doc/: SConscript  classification.tex  design.tex  gaussian.tex  gaussian_kernel.R  gaussian_kernel_3d.R  hermitian.tex  improve.tex  improvement.tex  incomplete_cholesky.tex  index.html_fase4  index.tex  installation.tex  kernel.tex  kml_win_dll.sh  linear.tex  mercer_kernel.tex  obtain.tex  polynomial.tex  ranking.tex  regression.tex  sigmoid.tex  sinc_data.R  tutorial.tex  view_matrix.tex
example/: CMakeLists.txt  Makefile.am  Makefile.in  SConscript  ann_regression.cpp  gaussian.cpp  incomplete_cholesky.cpp  kmltool.cpp  online_svm_classification.cpp  pos_symmetry.data  svm_classification.cpp  svm_ranking.cpp  svm_regression.cpp
kml/: SConscript  classification.hpp  cross_validation.hpp  design_matrix.hpp  determinate.hpp  distance.hpp  figueiredo.hpp  gaussian.hpp  hermitian.hpp  incomplete_cholesky.hpp  input_value.hpp  io.h  io.hpp  kernel.hpp  kernel_machine.hpp  kernel_traits.hpp  kernels.h  krls.hpp  least_squares.h  linear.hpp  m_tree.hpp  machine_traits.hpp  math.hpp  matrix_view.hpp  newton.hpp  old_rvm.hpp  online_determinate.hpp  online_gp.hpp  online_greedy_determinate.hpp  online_greedy_svm.hpp  online_ranking_svm.hpp  online_svm.hpp  polynomial.hpp  power_value.hpp  probabilistic.hpp  ranking.hpp  regression.hpp  rvm.hpp  scale.hpp  sigmoid.hpp  (+7 more)
lib/: SConscript  cblas.def  svm_c.cpp
(+99 files in other folders)
